--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0094.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0094.html
@@ -247,16 +247,11 @@
         </span>
         <span id="w_47" class="ocr_word" title="bbox 1769 635 1899 680" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὑπη-</ins>
+            <ins title="nlp 2.00">ὑπηρέτου</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 208 690 1899 762">
-        <span id="w_48" class="ocr_word" title="bbox 208 692 350 759" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ρέτου</ins>
-          </span>
-        </span>
         <span id="w_50" class="ocr_word" title="bbox 710 733 724 759">
           <span class="alternatives">
             <ins title="nlp 2.00">ἀνεδιδάχθη,</ins>
@@ -497,9 +492,14 @@
             <ins class="alt" title="nlp 1.00">ἐσκοποῦντο,</ins>
           </span>
         </span>
-        <span id="w_95" class="ocr_word" title="bbox 576 1079 647 1130" lang="grc">
+        <span id="w_95_0" class="ocr_word" title="bbox 576 1079 647 1130">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἱν’</ins>
+            <ins class="alt" title="nlp 2.00">ἵν᾿</ins>
+          </span>
+        </span>
+        <span id="w_95_1" class="ocr_word" title="bbox 576 1079 647 1130">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_96" class="ocr_word" title="bbox 678 1101 720 1131" lang="grc">
@@ -535,11 +535,6 @@
         <span id="w_102" class="ocr_word" title="bbox 1542 1082 1716 1132" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τούτου,</ins>
-          </span>
-        </span>
-        <span id="w_103" class="ocr_word" title="bbox 1781 1083 1902 1132" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἑτοίμως</ins>
           </span>
         </span>
       </span>
@@ -742,9 +737,14 @@
             <ins class="alt" title="nlp 1.00">δὲ</ins>
           </span>
         </span>
-        <span id="w_144" class="ocr_word" title="bbox 674 1471 777 1536" lang="grc">
+        <span id="w_144_0" class="ocr_word" title="bbox 674 1471 777 1536">
           <span class="alternatives">
-            <ins title="nlp 2.00">(καὶ</ins>
+            <ins class="alt" title="nlp 2.00">(καὶ</ins>
+          </span>
+        </span>
+        <span id="w_144_1" class="ocr_word" title="bbox 674 1471 777 1536">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_145" class="ocr_word" title="bbox 824 1471 917 1537" lang="grc">
@@ -765,11 +765,6 @@
         <span id="w_148" class="ocr_word" title="bbox 1371 1488 1545 1536" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ψυχὴν</ins>
-          </span>
-        </span>
-        <span id="w_149" class="ocr_word" title="bbox 1592 1476 1906 1537" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">θεραπεῦσαι</ins>
           </span>
         </span>
       </span>
