--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0105.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0105.html
@@ -614,7 +614,7 @@
         </span>
         <span id="w_117" class="ocr_word" title="bbox 115 1273 146 1301" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἡμεῖς</ins>
+            <ins title="nlp 2.00">,,ἡμεῖς</ins>
           </span>
         </span>
         <span id="w_118" class="ocr_word" title="bbox 346 1235 478 1301" lang="grc">
