--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0095.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0095.html
@@ -1299,19 +1299,19 @@
             <ins title="nlp 2.00">Ἀγαρηνῶν</ins>
           </span>
         </span>
-        <span id="w_252" class="ocr_word" title="bbox 1387 2473 1547 2537" lang="grc">
+        <span id="w_252_0" class="ocr_word" title="bbox 1387 2473 1547 2537">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἔτυχε</ins>
+            <ins class="alt" title="nlp 2.00">(ἔτυχε</ins>
+          </span>
+        </span>
+        <span id="w_252_1" class="ocr_word" title="bbox 1387 2473 1547 2537">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_253" class="ocr_word" title="bbox 1584 2472 1678 2539" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">γὰρ</ins>
-          </span>
-        </span>
-        <span id="w_254" class="ocr_word" title="bbox 1719 2492 1803 2537">
-          <span class="alternatives">
-            <ins title="nlp 2.00">τη-</ins>
           </span>
         </span>
       </span>
