--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0116.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0116.html
@@ -297,21 +297,26 @@
             <ins class="alt" title="nlp 1.00">ῥοῦν</ins>
           </span>
         </span>
-        <span id="w_57" class="ocr_word" title="bbox 1637 695 1912 762" lang="grc">
+        <span id="w_57_0" class="ocr_word" title="bbox 1637 695 1912 762">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀκολουθήσειε</ins>
+            <ins class="alt" title="nlp 2.00">ἀκολουθή-</ins>
           </span>
         </span>
-        <span id="w_58" class="ocr_word" title="bbox 1935 711 1962 747" lang="grc">
+        <span id="w_57_1" class="ocr_word" title="bbox 1637 695 1912 762">
           <span class="alternatives">
-            <ins title="nlp 2.00">C</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 223 771 1917 842">
-        <span id="w_60" class="ocr_word" title="bbox 359 775 443 825" lang="grc">
+        <span id="w_60_0" class="ocr_word" title="bbox 359 775 443 825">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins class="alt" title="nlp 2.00">σειε</ins>
+          </span>
+        </span>
+        <span id="w_60_1" class="ocr_word" title="bbox 359 775 443 825">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
           </span>
         </span>
         <span id="w_61" class="ocr_word" title="bbox 478 774 602 825" lang="grc">
@@ -566,16 +571,11 @@
         </span>
         <span id="w_110" class="ocr_word" title="bbox 1791 1167 1915 1213" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">θεα-</ins>
+            <ins title="nlp 2.00">θεασάμενοι</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 222 1237 1917 1307">
-        <span id="w_111" class="ocr_word" title="bbox 222 1237 424 1305" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σάμενοι</ins>
-          </span>
-        </span>
         <span id="w_112" class="ocr_word" title="bbox 463 1254 820 1291" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐπισπεύσουσι</ins>
@@ -764,9 +764,14 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_150" class="ocr_word" title="bbox 726 1562 840 1606" lang="grc">
+        <span id="w_150_0" class="ocr_word" title="bbox 726 1562 840 1606">
           <span class="alternatives">
-            <ins title="nlp 2.00">τοῦτ’ αὐτὸ</ins>
+            <ins class="alt" title="nlp 2.00">τοῦτ᾿</ins>
+          </span>
+        </span>
+        <span id="w_150_1" class="ocr_word" title="bbox 726 1562 840 1606">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">αὐτὸ</ins>
           </span>
         </span>
         <span id="w_151" class="ocr_word" title="bbox 1058 1554 1421 1619" lang="grc">
@@ -801,14 +806,24 @@
             <ins class="alt" title="nlp 1.00">ὃ</ins>
           </span>
         </span>
-        <span id="w_157" class="ocr_word" title="bbox 408 1631 967 1699" lang="grc">
+        <span id="w_157_0" class="ocr_word" title="bbox 408 1631 967 1699">
           <span class="alternatives">
-            <ins title="nlp 2.00">περὶ Ἄρεως Ὅμηρος.</ins>
+            <ins class="alt" title="nlp 2.00">περὶ</ins>
           </span>
         </span>
-        <span id="w_158" class="ocr_word" title="bbox 1030 1650 1076 1682" lang="grc">
+        <span id="w_157_1" class="ocr_word" title="bbox 408 1631 967 1699">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οἱ</ins>
+            <ins class="alt" title="nlp 2.00">Ἄρεως</ins>
+          </span>
+        </span>
+        <span id="w_158_0" class="ocr_word" title="bbox 1030 1650 1076 1682">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">Ὅμηρος.</ins>
+          </span>
+        </span>
+        <span id="w_158_1" class="ocr_word" title="bbox 1030 1650 1076 1682">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">οἱ</ins>
           </span>
         </span>
         <span id="w_159" class="ocr_word" title="bbox 1113 1633 1167 1681" lang="grc">
@@ -1046,9 +1061,14 @@
             <ins class="alt" title="nlp 1.00">ἀμφὶ</ins>
           </span>
         </span>
-        <span id="w_204" class="ocr_word" title="bbox 1195 2017 1516 2081" lang="grc">
+        <span id="w_204_0" class="ocr_word" title="bbox 1195 2017 1516 2081">
           <span class="alternatives">
-            <ins title="nlp 2.00">τὸν Ἀλέξιον</ins>
+            <ins class="alt" title="nlp 2.00">τὸν</ins>
+          </span>
+        </span>
+        <span id="w_204_1" class="ocr_word" title="bbox 1195 2017 1516 2081">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">Ἀλέξιον</ins>
           </span>
         </span>
         <span id="w_205" class="ocr_word" title="bbox 1553 2018 1670 2079" lang="grc">
@@ -1308,9 +1328,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 226 2484 1919 2555">
-        <span id="w_255" class="ocr_word" title="bbox 226 2507 319 2536" lang="grc">
+        <span id="w_255_0" class="ocr_word" title="bbox 226 2507 319 2536">
           <span class="alternatives">
-            <ins title="nlp 2.00">κατ’ αὐrὸ</ins>
+            <ins class="alt" title="nlp 2.00">κατ᾿</ins>
+          </span>
+        </span>
+        <span id="w_255_1" class="ocr_word" title="bbox 226 2507 319 2536">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">αὐτὸ</ins>
           </span>
         </span>
         <span id="w_256" class="ocr_word" title="bbox 541 2486 594 2537" lang="grc">
