--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0107.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0107.html
@@ -732,7 +732,7 @@
       <span class="ocr_line" title="bbox 43 1543 1797 1612">
         <span id="w_138" class="ocr_word" title="bbox 43 1545 321 1611" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">50 Ἀθύραν</ins>
+            <ins title="nlp 2.00">Ἀθύραν</ins>
           </span>
         </span>
         <span id="w_139" class="ocr_word" title="bbox 366 1543 564 1597" lang="grc">
@@ -794,7 +794,7 @@
         </span>
         <span id="w_150" class="ocr_word" title="bbox 993 1625 1154 1689" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κώμη</ins>
+            <ins title="nlp 2.00">(κώμη</ins>
           </span>
         </span>
         <span id="w_151" class="ocr_word" title="bbox 1182 1625 1236 1673" lang="grc">
