--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0069.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0069.html
@@ -532,19 +532,19 @@
             <ins class="alt" title="nlp 1.00">τῶν</ins>
           </span>
         </span>
-        <span id="w_102" class="ocr_word" title="bbox 1226 1077 1452 1144" lang="grc">
+        <span id="w_102_0" class="ocr_word" title="bbox 1226 1077 1452 1144">
           <span class="alternatives">
-            <ins title="nlp 2.00">δένδρω̣ν</ins>
+            <ins class="alt" title="nlp 2.00">δένδρων</ins>
+          </span>
+        </span>
+        <span id="w_102_1" class="ocr_word" title="bbox 1226 1077 1452 1144">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_103" class="ocr_word" title="bbox 1489 1085 1652 1139" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">σκιαῖς</ins>
-          </span>
-        </span>
-        <span id="w_104" class="ocr_word" title="bbox 1689 1076 1814 1129" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἀναψυχόμενοι,</ins>
           </span>
         </span>
       </span>
@@ -727,9 +727,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 68 1465 1816 1531">
-        <span id="w_141" class="ocr_word" title="bbox 68 1482 95 1517">
+        <span id="w_141_0" class="ocr_word" title="bbox 68 1482 95 1517">
           <span class="alternatives">
-            <ins title="nlp 2.00">c</ins>
+            <ins class="alt" title="nlp 2.00">C</ins>
+          </span>
+        </span>
+        <span id="w_141_1" class="ocr_word" title="bbox 68 1482 95 1517">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_142" class="ocr_word" title="bbox 120 1465 368 1531" lang="grc">
@@ -765,11 +770,6 @@
         <span id="w_148" class="ocr_word" title="bbox 1659 1487 1707 1517" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τε</ins>
-          </span>
-        </span>
-        <span id="w_149" class="ocr_word" title="bbox 1732 1487 1816 1518" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
       </span>
@@ -873,9 +873,14 @@
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_169" class="ocr_word" title="bbox 562 1702 702 1757" lang="grc">
+        <span id="w_169_0" class="ocr_word" title="bbox 562 1702 702 1757">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἴλους</ins>
+            <ins class="alt" title="nlp 2.00">ἕλους</ins>
+          </span>
+        </span>
+        <span id="w_169_1" class="ocr_word" title="bbox 562 1702 702 1757">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_170" class="ocr_word" title="bbox 743 1696 1015 1763" lang="grc">
@@ -901,11 +906,6 @@
         <span id="w_174" class="ocr_word" title="bbox 1572 1718 1656 1747" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_175" class="ocr_word" title="bbox 1695 1702 1813 1760" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ξυνδήσαντες</ins>
           </span>
         </span>
       </span>
@@ -1345,12 +1345,17 @@
         </span>
         <span id="w_262" class="ocr_word" title="bbox 933 2474 1006 2531" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οἱ</ins>
+            <ins title="nlp 2.00">(οἱ</ins>
           </span>
         </span>
-        <span id="w_263" class="ocr_word" title="bbox 1038 2472 1093 2522" lang="grc">
+        <span id="w_263_0" class="ocr_word" title="bbox 1038 2472 1093 2522">
           <span class="alternatives">
-            <ins title="nlp 2.00">(οἱ</ins>
+            <ins class="alt" title="nlp 2.00">δέ</ins>
+          </span>
+        </span>
+        <span id="w_263_1" class="ocr_word" title="bbox 1038 2472 1093 2522">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_264" class="ocr_word" title="bbox 1129 2493 1182 2539" lang="grc">
@@ -1373,11 +1378,6 @@
             <ins class="alt" title="nlp 1.00">ὑπὲρ</ins>
           </span>
         </span>
-        <span id="w_268" class="ocr_word" title="bbox 1732 2492 1814 2523" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">κεφαλῆς</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 122 2547 1878 2616">
         <span id="w_270" class="ocr_word" title="bbox 525 2552 917 2615" lang="grc">
@@ -1395,9 +1395,14 @@
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_273" class="ocr_word" title="bbox 1305 2549 1598 2616" lang="grc">
+        <span id="w_273_0" class="ocr_word" title="bbox 1305 2549 1598 2616">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ῥομπέρρτου</ins>
+            <ins class="alt" title="nlp 2.00">Ῥομπέρτου</ins>
+          </span>
+        </span>
+        <span id="w_273_1" class="ocr_word" title="bbox 1305 2549 1598 2616">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_274" class="ocr_word" title="bbox 1626 2547 1692 2609" lang="grc">
@@ -1408,11 +1413,6 @@
         <span id="w_275" class="ocr_word" title="bbox 1732 2550 1814 2600" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_276" class="ocr_word" title="bbox 1837 2564 1878 2595" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">30</ins>
           </span>
         </span>
       </span>
