--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0117.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0117.html
@@ -965,9 +965,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 98 1916 1798 1985">
-        <span id="w_184" class="ocr_word" title="bbox 98 1938 189 1969" lang="grc">
+        <span id="w_184_0" class="ocr_word" title="bbox 98 1938 189 1969">
           <span class="alternatives">
-            <ins title="nlp 2.00">κατ’ αὐτὸν</ins>
+            <ins class="alt" title="nlp 2.00">κατ᾿</ins>
+          </span>
+        </span>
+        <span id="w_184_1" class="ocr_word" title="bbox 98 1938 189 1969">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">αὐτὸν</ins>
           </span>
         </span>
         <span id="w_185" class="ocr_word" title="bbox 444 1939 499 1970" lang="grc">
