--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0121.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0121.html
@@ -268,11 +268,6 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 93 681 1793 749">
-        <span id="w_49" class="ocr_word" title="bbox 93 681 307 747" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">φαντικὰ</ins>
-          </span>
-        </span>
         <span id="w_50" class="ocr_word" title="bbox 345 700 634 746" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">ἐνέφαινον·</ins>
@@ -530,14 +525,9 @@
             <ins class="alt" title="nlp 1.00">58</ins>
           </span>
         </span>
-        <span id="w_99" class="ocr_word" title="bbox 97 1186 128 1214">
-          <span class="alternatives">
-            <ins title="nlp 2.00">„</ins>
-          </span>
-        </span>
         <span id="w_100" class="ocr_word" title="bbox 142 1150 189 1198" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τί</ins>
+            <ins class="alt" title="nlp 2.00">„τί</ins>
           </span>
         </span>
         <span id="w_101" class="ocr_word" title="bbox 229 1168 353 1215" lang="grc">
@@ -817,16 +807,11 @@
         </span>
         <span id="w_156" class="ocr_word" title="bbox 1673 1536 1793 1588" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀνα-</ins>
+            <ins title="nlp 2.00">ἀναδήσασθαι</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 95 1614 1793 1681">
-        <span id="w_157" class="ocr_word" title="bbox 95 1618 345 1681" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δήσασθαι</ins>
-          </span>
-        </span>
         <span id="w_158" class="ocr_word" title="bbox 381 1635 464 1665" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
@@ -1092,16 +1077,21 @@
             <ins class="alt" title="nlp 1.00">φησιν</ins>
           </span>
         </span>
-        <span id="w_210" class="ocr_word" title="bbox 1608 2008 1793 2069" lang="grc">
+        <span id="w_210_0" class="ocr_word" title="bbox 1608 2008 1793 2069">
           <span class="alternatives">
-            <ins title="nlp 2.00">„ἀπελδὼν</ins>
+            <ins class="alt" title="nlp 2.00">„ἀπελ-</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 40 2079 1793 2149">
-        <span id="w_211" class="ocr_word" title="bbox 40 2103 74 2136">
+        <span id="w_211_0" class="ocr_word" title="bbox 40 2103 74 2136">
           <span class="alternatives">
-            <ins title="nlp 2.00">D</ins>
+            <ins class="alt" title="nlp 2.00">D</ins>
+          </span>
+        </span>
+        <span id="w_211_1" class="ocr_word" title="bbox 40 2103 74 2136">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">θὼν</ins>
           </span>
         </span>
         <span id="w_213" class="ocr_word" title="bbox 253 2080 552 2149" lang="grc">
