--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0088.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0088.html
@@ -65,12 +65,7 @@
         </span>
         <span id="w_10" class="ocr_word" title="bbox 1791 1019 1873 1070" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_11" class="ocr_word" title="bbox 1896 1017 1933 1091">
-          <span class="alternatives">
-            <ins title="nlp 2.00">p.43 V. 39</ins>
+            <ins title="nlp 2.00">καὶ V. P. 39 43</ins>
           </span>
         </span>
       </span>
@@ -423,7 +418,7 @@
       <span class="ocr_line" title="bbox 116 1715 1872 1783">
         <span id="w_80" class="ocr_word" title="bbox 116 1716 425 1768" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">10 Ἰσαάκιον</ins>
+            <ins title="nlp 2.00">Ἰσαάκιον</ins>
           </span>
         </span>
         <span id="w_81" class="ocr_word" title="bbox 461 1719 620 1767" lang="grc">
@@ -839,9 +834,9 @@
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_162" class="ocr_word" title="bbox 1895 2431 1921 2464">
+        <span id="w_162_0" class="ocr_word" title="bbox 1895 2431 1921 2464">
           <span class="alternatives">
-            <ins title="nlp 2.00">c</ins>
+            <ins class="alt" title="nlp 2.00">C</ins>
           </span>
         </span>
       </span>
