--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0118.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0118.html
@@ -240,21 +240,26 @@
             <ins class="alt" title="nlp 1.00">στόλον</ins>
           </span>
         </span>
-        <span id="w_46" class="ocr_word" title="bbox 1738 608 1900 677" lang="grc">
+        <span id="w_46_0" class="ocr_word" title="bbox 1738 608 1900 677">
           <span class="alternatives">
-            <ins title="nlp 2.00">εὐτρεπίζοντα</ins>
+            <ins class="alt" title="nlp 2.00">εὐτρε-</ins>
           </span>
         </span>
-        <span id="w_47" class="ocr_word" title="bbox 1924 619 1970 654">
+        <span id="w_46_1" class="ocr_word" title="bbox 1738 608 1900 677">
           <span class="alternatives">
-            <ins title="nlp 2.00">v.</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 207 687 1964 754">
-        <span id="w_49" class="ocr_word" title="bbox 447 691 530 740" lang="grc">
+        <span id="w_49_0" class="ocr_word" title="bbox 447 691 530 740">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins class="alt" title="nlp 2.00">πίζοντα</ins>
+          </span>
+        </span>
+        <span id="w_49_1" class="ocr_word" title="bbox 447 691 530 740">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
           </span>
         </span>
         <span id="w_50" class="ocr_word" title="bbox 568 710 653 740" lang="grc">
