--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0097.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0097.html
@@ -488,9 +488,14 @@
             <ins title="nlp 2.00">Τζουρουλόν</ins>
           </span>
         </span>
-        <span id="w_94" class="ocr_word" title="bbox 803 1066 1073 1130" lang="grc">
+        <span id="w_94_0" class="ocr_word" title="bbox 803 1066 1073 1130">
           <span class="alternatives">
-            <ins title="nlp 2.00">(πολίχνιον</ins>
+            <ins class="alt" title="nlp 2.00">(πολίχνιον</ins>
+          </span>
+        </span>
+        <span id="w_94_1" class="ocr_word" title="bbox 803 1066 1073 1130">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_95" class="ocr_word" title="bbox 1122 1065 1175 1113" lang="grc">
@@ -511,11 +516,6 @@
         <span id="w_98" class="ocr_word" title="bbox 1571 1083 1668 1114" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">που</ins>
-          </span>
-        </span>
-        <span id="w_99" class="ocr_word" title="bbox 1708 1085 1797 1129" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὴν</ins>
           </span>
         </span>
       </span>
@@ -587,9 +587,14 @@
             <ins title="nlp 2.00">Πακουριανόν</ins>
           </span>
         </span>
-        <span id="w_113" class="ocr_word" title="bbox 1171 1216 1320 1285" lang="grc">
+        <span id="w_113_0" class="ocr_word" title="bbox 1171 1216 1320 1285">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἀνὴρ</ins>
+            <ins class="alt" title="nlp 2.00">(ἀνὴρ</ins>
+          </span>
+        </span>
+        <span id="w_113_1" class="ocr_word" title="bbox 1171 1216 1320 1285">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_114" class="ocr_word" title="bbox 1360 1220 1414 1269" lang="grc">
@@ -600,11 +605,6 @@
         <span id="w_115" class="ocr_word" title="bbox 1440 1221 1584 1279" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οὗτος</ins>
-          </span>
-        </span>
-        <span id="w_116" class="ocr_word" title="bbox 1623 1238 1795 1286" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μικρὸς</ins>
           </span>
         </span>
       </span>
@@ -1072,19 +1072,19 @@
             <ins class="alt" title="nlp 1.00">αὔριον</ins>
           </span>
         </span>
-        <span id="w_207" class="ocr_word" title="bbox 1175 1992 1381 2060" lang="grc">
+        <span id="w_207_0" class="ocr_word" title="bbox 1175 1992 1381 2060">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐζέλθῃς</ins>
+            <ins class="alt" title="nlp 2.00">ἐξέλθῃς</ins>
+          </span>
+        </span>
+        <span id="w_207_1" class="ocr_word" title="bbox 1175 1992 1381 2060">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_208" class="ocr_word" title="bbox 1410 2013 1508 2043" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῶν</ins>
-          </span>
-        </span>
-        <span id="w_209" class="ocr_word" title="bbox 1535 1991 1789 2054" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐνταυθοῖ,</ins>
           </span>
         </span>
       </span>
