--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0119.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0119.html
@@ -798,24 +798,24 @@
         </span>
         <span id="w_153" class="ocr_word" title="bbox 1613 1618 1809 1670" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">παύσα-</ins>
+            <ins title="nlp 2.00">παύσασθαι</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 113 1695 1806 1766">
-        <span id="w_154" class="ocr_word" title="bbox 113 1704 238 1748" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σθαι</ins>
-          </span>
-        </span>
         <span id="w_155" class="ocr_word" title="bbox 276 1719 361 1764" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῆς</ins>
           </span>
         </span>
-        <span id="w_156" class="ocr_word" title="bbox 401 1700 610 1766" lang="grc">
+        <span id="w_156_0" class="ocr_word" title="bbox 401 1700 610 1766">
           <span class="alternatives">
-            <ins title="nlp 2.00">εἰρεσία</ins>
+            <ins class="alt" title="nlp 2.00">εἰρεσίας</ins>
+          </span>
+        </span>
+        <span id="w_156_1" class="ocr_word" title="bbox 401 1700 610 1766">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_157" class="ocr_word" title="bbox 649 1699 949 1749" lang="grc">
@@ -836,11 +836,6 @@
         <span id="w_160" class="ocr_word" title="bbox 1485 1698 1684 1747" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἑστάναι</ins>
-          </span>
-        </span>
-        <span id="w_161" class="ocr_word" title="bbox 1724 1696 1806 1762" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐφ’</ins>
           </span>
         </span>
       </span>
