--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0109.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0109.html
@@ -105,9 +105,14 @@
             <ins class="alt" title="nlp 1.00">λόγοις</ins>
           </span>
         </span>
-        <span id="w_18" class="ocr_word" title="bbox 859 388 1123 437" lang="grc">
+        <span id="w_18_0" class="ocr_word" title="bbox 859 388 1123 437">
           <span class="alternatives">
-            <ins title="nlp 2.00">υποσαίνοι</ins>
+            <ins class="alt" title="nlp 2.00">ὑποσαίνοι</ins>
+          </span>
+        </span>
+        <span id="w_18_1" class="ocr_word" title="bbox 859 388 1123 437">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_19" class="ocr_word" title="bbox 1163 408 1250 438" lang="grc">
@@ -123,11 +128,6 @@
         <span id="w_21" class="ocr_word" title="bbox 1541 388 1623 438" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_22" class="ocr_word" title="bbox 1660 385 1776 453" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">πρόσχημα</ins>
           </span>
         </span>
       </span>
@@ -276,14 +276,14 @@
             <ins title="nlp 2.00">ἕκαστος</ins>
           </span>
         </span>
-        <span id="w_51" class="ocr_word" title="bbox 1670 638 1775 670" lang="grc">
+        <span id="w_51_0" class="ocr_word" title="bbox 1670 638 1775 670">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἔπι</ins>
+            <ins class="alt" title="nlp 2.00">ἐπι-</ins>
           </span>
         </span>
-        <span id="w_52" class="ocr_word" title="bbox 1818 633 1839 666">
+        <span id="w_51_1" class="ocr_word" title="bbox 1670 638 1775 670">
           <span class="alternatives">
-            <ins title="nlp 2.00">5</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -379,7 +379,7 @@
       <span class="ocr_line" title="bbox 12 848 1775 921">
         <span id="w_70" class="ocr_word" title="bbox 12 848 17 920">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">1</ins>
+            <ins title="nlp 2.00">|</ins>
           </span>
         </span>
         <span id="w_71" class="ocr_word" title="bbox 85 866 331 921" lang="grc">
@@ -1094,11 +1094,6 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 86 2091 1778 2160">
-        <span id="w_208" class="ocr_word" title="bbox 86 2111 234 2159" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">νοντι,</ins>
-          </span>
-        </span>
         <span id="w_209" class="ocr_word" title="bbox 273 2094 323 2144" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">εἴ</ins>
