--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0070.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0070.html
@@ -267,9 +267,14 @@
             <ins title="nlp 2.00">Ῥομπέρτου</ins>
           </span>
         </span>
-        <span id="w_50" class="ocr_word" title="bbox 1625 695 1885 760" lang="grc">
+        <span id="w_50_0" class="ocr_word" title="bbox 1625 695 1885 760">
           <span class="alternatives">
-            <ins title="nlp 2.00">διηγήσασ-</ins>
+            <ins class="alt" title="nlp 2.00">διηγήσασθαι.</ins>
+          </span>
+        </span>
+        <span id="w_50_1" class="ocr_word" title="bbox 1625 695 1885 760">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_51" class="ocr_word" title="bbox 1906 708 1947 742" lang="grc">
@@ -277,18 +282,8 @@
             <ins title="nlp 2.00">Ρ.</ins>
           </span>
         </span>
-        <span id="w_52" class="ocr_word" title="bbox 1970 706 1998 739">
-          <span class="alternatives">
-            <ins title="nlp 2.00">2</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 193 767 1886 839">
-        <span id="w_53" class="ocr_word" title="bbox 193 781 301 825" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">θαι.</ins>
-          </span>
-        </span>
         <span id="w_54" class="ocr_word" title="bbox 376 776 544 838" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">ἐπειδὴ</ins>
@@ -457,9 +452,14 @@
             <ins title="nlp 2.00">ἀπαράσσων,</ins>
           </span>
         </span>
-        <span id="w_87_0" class="ocr_word" title="bbox 564 1097 645 1132">
+        <span id="w_87_0_0" class="ocr_word" title="bbox 564 1097 645 1132">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">ἔστ'</ins>
+            <ins class="alt" title="nlp 2.00">ἔστ᾿</ins>
+          </span>
+        </span>
+        <span id="w_87_0_1" class="ocr_word" title="bbox 564 1097 645 1132">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_87_1" class="ocr_word" title="bbox 564 1097 645 1132">
@@ -495,11 +495,6 @@
         <span id="w_93" class="ocr_word" title="bbox 1600 1103 1622 1130" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τε</ins>
-          </span>
-        </span>
-        <span id="w_94" class="ocr_word" title="bbox 1688 1082 1886 1142" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὀδόντες</ins>
           </span>
         </span>
       </span>
@@ -1221,9 +1216,9 @@
             <ins class="alt" title="nlp 1.00">τῆς</ins>
           </span>
         </span>
-        <span id="w_233" class="ocr_word" title="bbox 1909 2420 1936 2455">
+        <span id="w_233_0" class="ocr_word" title="bbox 1909 2420 1936 2455">
           <span class="alternatives">
-            <ins title="nlp 2.00">c</ins>
+            <ins class="alt" title="nlp 2.00">C</ins>
           </span>
         </span>
       </span>
@@ -1369,9 +1364,14 @@
             <ins class="alt" title="nlp 1.00">θυγατέρα</ins>
           </span>
         </span>
-        <span id="w_262" class="ocr_word" title="bbox 991 2708 1185 2777" lang="grc">
+        <span id="w_262_0" class="ocr_word" title="bbox 991 2708 1185 2777">
           <span class="alternatives">
-            <ins title="nlp 2.00">(Ἑλένη</ins>
+            <ins class="alt" title="nlp 2.00">(Ἑλένη</ins>
+          </span>
+        </span>
+        <span id="w_262_1" class="ocr_word" title="bbox 991 2708 1185 2777">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_263" class="ocr_word" title="bbox 1225 2711 1279 2759" lang="grc">
@@ -1382,11 +1382,6 @@
         <span id="w_264" class="ocr_word" title="bbox 1316 2728 1443 2772" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">αὕτη</ins>
-          </span>
-        </span>
-        <span id="w_265" class="ocr_word" title="bbox 1481 2706 1888 2776" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">προσηγορεύετο)</ins>
           </span>
         </span>
       </span>
