--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0089.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0089.html
@@ -849,9 +849,9 @@
             <ins class="alt" title="nlp 1.00">ὁ</ins>
           </span>
         </span>
-        <span id="w_165" class="ocr_word" title="bbox 1542 1703 1787 1766" lang="grc">
+        <span id="w_165_0" class="ocr_word" title="bbox 1542 1703 1787 1766">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἰσαάκιος</ins>
+            <ins class="alt" title="nlp 2.00">Ἰσαάκιος</ins>
           </span>
         </span>
       </span>
@@ -1052,9 +1052,14 @@
             <ins class="alt" title="nlp 2.00">τἀδελφοῦ,</ins>
           </span>
         </span>
-        <span id="w_208" class="ocr_word" title="bbox 1562 2016 1789 2066" lang="grc">
+        <span id="w_208_0" class="ocr_word" title="bbox 1562 2016 1789 2066">
           <span class="alternatives">
-            <ins title="nlp 2.00">καὶ ὃσον</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
+          </span>
+        </span>
+        <span id="w_208_1" class="ocr_word" title="bbox 1562 2016 1789 2066">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ὅσον</ins>
           </span>
         </span>
       </span>
@@ -1487,9 +1492,14 @@
             <ins class="alt" title="nlp 1.00">φθονοῦσιν</ins>
           </span>
         </span>
-        <span id="w_294" class="ocr_word" title="bbox 1168 2827 1322 2880" lang="grc">
+        <span id="w_294_0" class="ocr_word" title="bbox 1168 2827 1322 2880">
           <span class="alternatives">
-            <ins title="nlp 2.00">(φθον</ins>
+            <ins class="alt" title="nlp 2.00">(φθον</ins>
+          </span>
+        </span>
+        <span id="w_294_1" class="ocr_word" title="bbox 1168 2827 1322 2880">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_295" class="ocr_word" title="bbox 1355 2839 1401 2867">
@@ -1510,11 +1520,6 @@
         <span id="w_298" class="ocr_word" title="bbox 1559 2828 1651 2877">
           <span class="alternatives">
             <ins title="nlp 2.00">ras)</ins>
-          </span>
-        </span>
-        <span id="w_299" class="ocr_word" title="bbox 1685 2823 1716 2867">
-          <span class="alternatives">
-            <ins title="nlp 2.00">C</ins>
           </span>
         </span>
       </span>
