--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0123.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0123.html
@@ -22,14 +22,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 26 996 1821 1070">
-        <span id="w_2" class="ocr_word" title="bbox 26 1003 30 1066">
+        <span id="w_2_0" class="ocr_word" title="bbox 26 1003 30 1066">
           <span class="alternatives">
-            <ins title="nlp 2.00">60 </ins>
+            <ins class="alt" title="nlp 2.00">70</ins>
           </span>
         </span>
-        <span id="w_3" class="ocr_word" title="bbox 58 996 98 1070">
+        <span id="w_2_1" class="ocr_word" title="bbox 26 1003 30 1066">
           <span class="alternatives">
-            <ins title="nlp 2.00">70</ins>
+            <ins class="alt" title="nlp 2.00">60</ins>
           </span>
         </span>
         <span id="w_4" class="ocr_word" title="bbox 264 1004 311 1050">
@@ -195,7 +195,7 @@
         </span>
         <span id="w_37" class="ocr_word" title="bbox 1773 1233 1822 1303">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ὁ</ins>
+            <ins title="nlp 2.00">ὁ</ins>
           </span>
         </span>
       </span>
@@ -519,12 +519,7 @@
         </span>
         <span id="w_100" class="ocr_word" title="bbox 817 1783 1123 1844" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">νεωτερισθῇ</ins>
-          </span>
-        </span>
-        <span id="w_101" class="ocr_word" title="bbox 1137 1815 1151 1842">
-          <span class="alternatives">
-            <ins title="nlp 2.00">, </ins>
+            <ins class="alt" title="nlp 2.00">νεωτερισθῇ, </ins>
           </span>
         </span>
         <span id="w_102" class="ocr_word" title="bbox 1178 1777 1575 1845" lang="grc">
