--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0120.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0120.html
@@ -334,21 +334,26 @@
             <ins class="alt" title="nlp 1.00">ῥηθεὶς</ins>
           </span>
         </span>
-        <span id="w_63" class="ocr_word" title="bbox 1747 689 1908 750" lang="grc">
+        <span id="w_63_0" class="ocr_word" title="bbox 1747 689 1908 750">
           <span class="alternatives">
-            <ins title="nlp 2.00">Νικηφόρος</ins>
+            <ins class="alt" title="nlp 2.00">Νικη-</ins>
           </span>
         </span>
-        <span id="w_64" class="ocr_word" title="bbox 1935 694 1960 727">
+        <span id="w_63_1" class="ocr_word" title="bbox 1747 689 1908 750">
           <span class="alternatives">
-            <ins title="nlp 2.00">c</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 215 761 1912 830">
-        <span id="w_66" class="ocr_word" title="bbox 415 761 440 814" lang="grc">
+        <span id="w_66_0" class="ocr_word" title="bbox 415 761 440 814">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὁ</ins>
+            <ins class="alt" title="nlp 2.00">φόρος</ins>
+          </span>
+        </span>
+        <span id="w_66_1" class="ocr_word" title="bbox 415 761 440 814">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ὁ</ins>
           </span>
         </span>
         <span id="w_67" class="ocr_word" title="bbox 483 763 821 830" lang="grc">
@@ -1275,7 +1280,7 @@
         </span>
         <span id="w_245" class="ocr_word" title="bbox 741 2389 978 2460" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00"> βούλει,”</ins>
+            <ins title="nlp 2.00">βούλει,”</ins>
           </span>
         </span>
         <span id="w_246" class="ocr_word" title="bbox 1027 2411 1152 2459" lang="grc">
@@ -1545,9 +1550,14 @@
             <ins title="nlp 2.00">μ.</ins>
           </span>
         </span>
-        <span id="w_298" class="ocr_word" title="bbox 492 2871 553 2913">
+        <span id="w_298_0" class="ocr_word" title="bbox 492 2871 553 2913">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ασ</ins>
+            <ins class="alt" title="nlp 2.00">Αs</ins>
+          </span>
+        </span>
+        <span id="w_298_1" class="ocr_word" title="bbox 492 2871 553 2913">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_299" class="ocr_word" title="bbox 614 2875 666 2914">
@@ -1588,11 +1598,6 @@
         <span id="w_306" class="ocr_word" title="bbox 1617 2866 1869 2925" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀφέλωμαι</ins>
-          </span>
-        </span>
-        <span id="w_307" class="ocr_word" title="bbox 1892 2867 1927 2910">
-          <span class="alternatives">
-            <ins title="nlp 2.00">F</ins>
           </span>
         </span>
       </span>
