--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0110.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0110.html
@@ -158,7 +158,7 @@
         </span>
         <span id="w_28" class="ocr_word" title="bbox 1765 475 1904 540" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πάρει</ins>
+            <ins title="nlp 2.00">παρεί </ins>
           </span>
         </span>
       </span>
@@ -307,9 +307,9 @@
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_57" class="ocr_word" title="bbox 1833 724 1900 771" lang="grc">
+        <span id="w_57_0" class="ocr_word" title="bbox 1833 724 1900 771">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐρ(??)</ins>
+            <ins class="alt" title="nlp 2.00">ἐρυ</ins>
           </span>
         </span>
       </span>
@@ -391,9 +391,9 @@
             <ins class="alt" title="nlp 1.00">τὸν</ins>
           </span>
         </span>
-        <span id="w_73" class="ocr_word" title="bbox 1708 858 1908 922" lang="grc">
+        <span id="w_73_0" class="ocr_word" title="bbox 1708 858 1908 922">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ἀλέξιο(??)</ins>
+            <ins class="alt" title="nlp 2.00">Ἀλέξιον</ins>
           </span>
         </span>
       </span>
