--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0124.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0124.html
@@ -650,7 +650,7 @@
         </span>
         <span id="w_124" class="ocr_word" title="bbox 1173 1321 1256 1390" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(οὐ</ins>
+            <ins title="nlp 2.00">οὐ</ins>
           </span>
         </span>
         <span id="w_125" class="ocr_word" title="bbox 1290 1337 1500 1387" lang="grc">
@@ -917,12 +917,7 @@
         </span>
         <span id="w_177" class="ocr_word" title="bbox 803 1790 926 1855" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ῥόδα</ins>
-          </span>
-        </span>
-        <span id="w_178" class="ocr_word" title="bbox 944 1806 952 1815">
-          <span class="alternatives">
-            <ins title="nlp 2.00">· </ins>
+            <ins class="alt" title="nlp 2.00">ῥόδα· </ins>
           </span>
         </span>
         <span id="w_179" class="ocr_word" title="bbox 1008 1808 1054 1840" lang="grc">
