--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0096.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0096.html
@@ -12,7 +12,7 @@
       <span class="ocr_line" title="bbox 216 182 1351 239">
         <span id="w_0" class="ocr_word" title="bbox 216 187 284 239">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">ββ</ins>
+            <ins title="nlp 2.00">66</ins>
           </span>
         </span>
         <span id="w_1" class="ocr_word" title="bbox 766 183 981 227">
@@ -136,9 +136,14 @@
             <ins class="alt" title="nlp 1.00">λεγομένου</ins>
           </span>
         </span>
-        <span id="w_24" class="ocr_word" title="bbox 1014 467 1255 532" lang="grc">
+        <span id="w_24_0" class="ocr_word" title="bbox 1014 467 1255 532">
           <span class="alternatives">
-            <ins title="nlp 2.00">Boρίλου,</ins>
+            <ins class="alt" title="nlp 2.00">Βορίλου,</ins>
+          </span>
+        </span>
+        <span id="w_24_1" class="ocr_word" title="bbox 1014 467 1255 532">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_25" class="ocr_word" title="bbox 1294 484 1438 532" lang="grc">
@@ -154,11 +159,6 @@
         <span id="w_27" class="ocr_word" title="bbox 1598 465 1827 532" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">βασιλέα,</ins>
-          </span>
-        </span>
-        <span id="w_28" class="ocr_word" title="bbox 1866 468 1910 517" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἰ</ins>
           </span>
         </span>
       </span>
@@ -255,14 +255,14 @@
             <ins class="alt" title="nlp 1.00">εὐθὺς</ins>
           </span>
         </span>
-        <span id="w_48" class="ocr_word" title="bbox 1761 641 1905 686" lang="grc">
+        <span id="w_48_0" class="ocr_word" title="bbox 1761 641 1905 686">
           <span class="alternatives">
-            <ins title="nlp 2.00">μετα-</ins>
+            <ins class="alt" title="nlp 2.00">μετακαλεσάμενος</ins>
           </span>
         </span>
-        <span id="w_49" class="ocr_word" title="bbox 1930 634 1976 670">
+        <span id="w_48_1" class="ocr_word" title="bbox 1761 641 1905 686">
           <span class="alternatives">
-            <ins title="nlp 2.00">ν.</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -910,9 +910,14 @@
             <ins class="alt" title="nlp 1.00">ἀδείας</ins>
           </span>
         </span>
-        <span id="w_177" class="ocr_word" title="bbox 933 1781 1136 1849" lang="grc">
+        <span id="w_177_0" class="ocr_word" title="bbox 933 1781 1136 1849">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἑσπέρα</ins>
+            <ins class="alt" title="nlp 2.00">(ἑσπέρα</ins>
+          </span>
+        </span>
+        <span id="w_177_1" class="ocr_word" title="bbox 933 1781 1136 1849">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_178" class="ocr_word" title="bbox 1174 1783 1228 1831" lang="grc">
@@ -938,11 +943,6 @@
         <span id="w_182" class="ocr_word" title="bbox 1679 1803 1779 1833" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῶν</ins>
-          </span>
-        </span>
-        <span id="w_183" class="ocr_word" title="bbox 1813 1787 1907 1831" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Κομνηνῶν</ins>
           </span>
         </span>
       </span>
@@ -1140,9 +1140,14 @@
             <ins title="nlp 2.00">Κομνηνὸς</ins>
           </span>
         </span>
-        <span id="w_222" class="ocr_word" title="bbox 1186 2163 1415 2230" lang="grc">
+        <span id="w_222_0" class="ocr_word" title="bbox 1186 2163 1415 2230">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ἀλέζιος.</ins>
+            <ins class="alt" title="nlp 2.00">Ἀλέξιος.</ins>
+          </span>
+        </span>
+        <span id="w_222_1" class="ocr_word" title="bbox 1186 2163 1415 2230">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_223" class="ocr_word" title="bbox 1474 2175 1711 2220" lang="grc">
@@ -1153,11 +1158,6 @@
         <span id="w_224" class="ocr_word" title="bbox 1736 2187 1782 2219" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οἱ</ins>
-          </span>
-        </span>
-        <span id="w_225" class="ocr_word" title="bbox 1807 2170 1904 2235" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἤδη</ins>
           </span>
         </span>
       </span>
