--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0125.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0125.html
@@ -149,12 +149,7 @@
         </span>
         <span id="w_26" class="ocr_word" title="bbox 1026 481 1181 522" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὕτως</ins>
-          </span>
-        </span>
-        <span id="w_27" class="ocr_word" title="bbox 1194 499 1208 527">
-          <span class="alternatives">
-            <ins title="nlp 2.00">, </ins>
+            <ins class="alt" title="nlp 2.00">οὕτως, </ins>
           </span>
         </span>
         <span id="w_28" class="ocr_word" title="bbox 1237 482 1336 513" lang="grc">
@@ -310,12 +305,7 @@
         </span>
         <span id="w_58" class="ocr_word" title="bbox 1069 694 1268 760" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γνώμης</ins>
-          </span>
-        </span>
-        <span id="w_59" class="ocr_word" title="bbox 1284 713 1293 724">
-          <span class="alternatives">
-            <ins title="nlp 2.00">· </ins>
+            <ins class="alt" title="nlp 2.00">γνώμης· </ins>
           </span>
         </span>
         <span id="w_60" class="ocr_word" title="bbox 1333 696 1566 760" lang="grc">
@@ -342,12 +332,7 @@
         </span>
         <span id="w_65" class="ocr_word" title="bbox 602 771 931 839" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">διηγουμένης</ins>
-          </span>
-        </span>
-        <span id="w_66" class="ocr_word" title="bbox 944 809 959 837">
-          <span class="alternatives">
-            <ins title="nlp 2.00">, </ins>
+            <ins class="alt" title="nlp 2.00">διηγουμένης, </ins>
           </span>
         </span>
         <span id="w_67" class="ocr_word" title="bbox 1012 772 1170 821" lang="grc">
@@ -1020,12 +1005,7 @@
         </span>
         <span id="w_200" class="ocr_word" title="bbox 841 1875 1037 1910" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἄνεισιν</ins>
-          </span>
-        </span>
-        <span id="w_201" class="ocr_word" title="bbox 1052 1898 1065 1925">
-          <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
+            <ins class="alt" title="nlp 2.00">ἄνεισιν,</ins>
           </span>
         </span>
         <span id="w_202" class="ocr_word" title="bbox 1097 1881 1122 1910" lang="grc">
@@ -1146,7 +1126,7 @@
       <span class="ocr_line" title="bbox 64 2093 1815 2160">
         <span id="w_224" class="ocr_word" title="bbox 64 2095 329 2160" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">D δόμητο,</ins>
+            <ins title="nlp 2.00">δόμητο,</ins>
           </span>
         </span>
         <span id="w_225" class="ocr_word" title="bbox 370 2114 497 2146" lang="grc">
