--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0131.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0131.html
@@ -38,9 +38,14 @@
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_5" class="ocr_word" title="bbox 216 309 448 374" lang="grc">
+        <span id="w_5_0" class="ocr_word" title="bbox 216 309 448 374">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">Καίσαρος,</ins>
+            <ins class="alt" title="nlp 2.00">καίσαρος,</ins>
+          </span>
+        </span>
+        <span id="w_5_1" class="ocr_word" title="bbox 216 309 448 374">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_7" class="ocr_word" title="bbox 518 328 568 358" lang="grc">
@@ -66,11 +71,6 @@
         <span id="w_11" class="ocr_word" title="bbox 1269 306 1617 376" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">Ἀνδρονίκους</ins>
-          </span>
-        </span>
-        <span id="w_12" class="ocr_word" title="bbox 1665 314 1788 364" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">κεκείνους</ins>
           </span>
         </span>
       </span>
@@ -191,16 +191,11 @@
         </span>
         <span id="w_35" class="ocr_word" title="bbox 1680 559 1789 596" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">στε-</ins>
+            <ins title="nlp 2.00">στενουμένη</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 90 616 1854 688">
-        <span id="w_36" class="ocr_word" title="bbox 90 616 304 681" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">νουμένη</ins>
-          </span>
-        </span>
         <span id="w_37" class="ocr_word" title="bbox 359 617 671 682" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καταλλήλως</ins>
@@ -513,9 +508,9 @@
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_99" class="ocr_word" title="bbox 1705 1086 1792 1136" lang="grc">
+        <span id="w_99_0" class="ocr_word" title="bbox 1705 1086 1792 1136">
           <span class="alternatives">
-            <ins title="nlp 2.00">κύ</ins>
+            <ins class="alt" title="nlp 2.00">κύκλου.</ins>
           </span>
         </span>
       </span>
