--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0098.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0098.html
@@ -1606,9 +1606,14 @@
             <ins title="nlp 2.00">F</ins>
           </span>
         </span>
-        <span id="w_313" class="ocr_word" title="bbox 1661 2822 1702 2874" lang="grc">
+        <span id="w_313_0" class="ocr_word" title="bbox 1661 2822 1702 2874">
           <span class="alternatives">
-            <ins title="nlp 2.00">(τ</ins>
+            <ins class="alt" title="nlp 2.00">(τ</ins>
+          </span>
+        </span>
+        <span id="w_313_1" class="ocr_word" title="bbox 1661 2822 1702 2874">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_314" class="ocr_word" title="bbox 1735 2819 1783 2861">
@@ -1619,11 +1624,6 @@
         <span id="w_315" class="ocr_word" title="bbox 1813 2835 1839 2874" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">χ</ins>
-          </span>
-        </span>
-        <span id="w_316" class="ocr_word" title="bbox 1870 2819 1919 2861">
-          <span class="alternatives">
-            <ins title="nlp 2.00">in</ins>
           </span>
         </span>
       </span>
