--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0141.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0141.html
@@ -125,9 +125,9 @@
             <ins class="alt" title="nlp 1.00">νῦν</ins>
           </span>
         </span>
-        <span id="w_22" class="ocr_word" title="bbox 1759 401 1789 444" lang="grc">
+        <span id="w_22_0" class="ocr_word" title="bbox 1759 401 1789 444">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἠ</ins>
+            <ins class="alt" title="nlp 2.00">ἤ</ins>
           </span>
         </span>
       </span>
@@ -226,16 +226,11 @@
         </span>
         <span id="w_41" class="ocr_word" title="bbox 1717 538 1792 584" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λο-</ins>
+            <ins title="nlp 2.00">λογοθέτης</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 98 608 1858 677">
-        <span id="w_42" class="ocr_word" title="bbox 98 608 306 676" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γοθέτης</ins>
-          </span>
-        </span>
         <span id="w_43" class="ocr_word" title="bbox 344 629 442 659" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῶν</ins>
@@ -248,7 +243,7 @@
         </span>
         <span id="w_45" class="ocr_word" title="bbox 802 628 900 657" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κἀν</ins>
+            <ins title="nlp 2.00">κἄν</ins>
           </span>
         </span>
         <span id="w_46" class="ocr_word" title="bbox 937 613 1110 675" lang="grc">
@@ -797,16 +792,11 @@
         </span>
         <span id="w_153" class="ocr_word" title="bbox 1647 1541 1790 1592" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πολέ-</ins>
+            <ins title="nlp 2.00">πολέμους</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 97 1615 1790 1685">
-        <span id="w_154" class="ocr_word" title="bbox 97 1639 218 1685" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μους</ins>
-          </span>
-        </span>
         <span id="w_155" class="ocr_word" title="bbox 266 1637 349 1668" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
@@ -1037,16 +1027,11 @@
         </span>
         <span id="w_200" class="ocr_word" title="bbox 1664 1930 1790 1979" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οἰκο-</ins>
+            <ins title="nlp 2.00">οἰκονομίαν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 96 2006 1791 2074">
-        <span id="w_201" class="ocr_word" title="bbox 96 2009 271 2074" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">νομίαν</ins>
-          </span>
-        </span>
         <span id="w_202" class="ocr_word" title="bbox 318 2027 384 2066" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὡς</ins>
@@ -1453,11 +1438,6 @@
         <span id="w_282" class="ocr_word" title="bbox 37 2721 76 2758">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">86</ins>
-          </span>
-        </span>
-        <span id="w_283" class="ocr_word" title="bbox 98 2708 198 2757" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λῶν</ins>
           </span>
         </span>
         <span id="w_284" class="ocr_word" title="bbox 235 2705 537 2774" lang="grc">
